gCamp aligned at top,\n images from correct site, in app/assets/images,\npanels uniform,\n gCamp links to homepage

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,3 +20,9 @@
 body {
   padding-top: 60px;
 }
+
+@media (min-width: 992px) {
+  .col-md-4 > .panel > .panel-body {
+    min-height: 120px;
+  }
+}
